--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
   width: 80%;
   list-style-type: none;
   margin: 0;
-    padding-top: 17px;
+    padding-top: 20px;
     padding-bottom: 20px;
   overflow: hidden;
 }
@@ -67,9 +67,14 @@ header {
   text-decoration: none;
 }
 .menuItems li a:hover:not(.active) {
-  background-color: #111;
+  background-color: #d5805d;
+  color: white;
 }
-.menuitems .active {
+.menuItems li a:hover:not(.drop) {
+  background-color: #d5805d;
+  color: black;
+}
+.menuItems .active {
   background-color: #d5805d;
   color: white;
 }
