--- a/src/main/webapp/WEB-INF/jsp/css/userProfile.css
+++ b/src/main/webapp/WEB-INF/jsp/css/userProfile.css
@@ -10,6 +10,9 @@
   flex: 0.5;
   margin-right: 50px;
 }
+.columnFullForm {
+  flex: 1;
+}
 .columnR {
   flex: 1;
 }
@@ -51,7 +54,10 @@
   font-family: "Roboto";
   margin: 2;
 }
+.centerForm {
+  justify-content: center;
 
+}
 .editButton {
   background-color: #ddd;
   border: none;
