Overall Style update 1

--- a/src/main/webapp/WEB-INF/jsp/css/forms.css
+++ b/src/main/webapp/WEB-INF/jsp/css/forms.css
@@ -9,8 +9,8 @@
 .inputField {
     margin-bottom: 10px;
 }
-.springInput {
-    padding: 8px;
-    border-radius: 0.75em;
-    border-color: darkgray;
-}
+/*.springInput {*/
+/*    padding: 8px;*/
+/*    border-radius: 0.75em;*/
+/*    border-color: darkgray;*/
+/*}*/
