shop updates unfinished

--- a/src/main/webapp/WEB-INF/jsp/css/shop.css
+++ b/src/main/webapp/WEB-INF/jsp/css/shop.css
@@ -58,6 +58,13 @@
     cursor: pointer;
     border-radius: 16px;
 }
+.grid-container {
+    display: inline-grid;
+}
+.item1 {
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
 
 hr.solid {
     border-top: 3px solid #bbb;
