Finished shop style update

--- a/src/main/webapp/WEB-INF/jsp/css/style.css
+++ b/src/main/webapp/WEB-INF/jsp/css/style.css
@@ -147,6 +147,12 @@ header {
     background-color: #fff;
     text-align: center;
 }
+.bookLabel {
+    font-family: Roboto;
+}
+a {
+    color:  #009879;
+}
 
 /* ----------------- login page ------------------ */
 #login fieldset {
