--- a/src/main/webapp/WEB-INF/jsp/css/bookPage.css
+++ b/src/main/webapp/WEB-INF/jsp/css/bookPage.css
@@ -15,6 +15,19 @@
   padding-right: 20px;
   padding-bottom: 50px;
 }
+.bookBox {
+  padding: 10px;
+  margin: 30px;
+  border-color: #333444;
+  /*border-style: groove;*/
+  border-width: 2px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+  inset -6px -6px 10px 0 rgba(255, 255, 255, 0.9);
+  width: 85%;
+
+}
 
 /* -------------------------- left column -------- */
 .cardDark {
@@ -24,13 +37,16 @@
   text-align: center;
 }
 .cardLight {
-  box-shadow: 5px 5px 13px 3px rgba(0, 0, 0, 0.25); /* this adds the "card" effect */
-
-  height: 480px;
-  background-color: #fff;
+  /*box-shadow: 5px 5px 13px 3px rgba(0, 0, 0, 0.25); !* this adds the "card" effect *!*/
+  box-shadow:
+          12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+          -8px -8px 12px 0 rgba(255, 255, 255, 0.9);
+  height: 700px;
+  background-color: #f0f0f0;
   text-align: center;
   width: 98%;
   margin-bottom: 100px;
+  border-radius: 20px;
 }
 
 .cardDark h {
