--- a/src/main/webapp/WEB-INF/jsp/css/style.css
+++ b/src/main/webapp/WEB-INF/jsp/css/style.css
@@ -142,10 +142,22 @@ header {
     z-index: 0;
 }
 .bodytext {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-    padding: 16px;
-    background-color: #fff;
-    text-align: center;
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); !* this adds the "card" effect *!*/
+    /*padding: 16px;*/
+    /*background-color: #fff;*/
+    /*text-align: center;*/
+    padding: 10px;
+    align-items: center;
+    background-color: #f0f0f0;
+    box-shadow:
+            12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+            -8px -8px 12px 0 rgba(255, 255, 255, 0.9);
+    border-radius: 20px;
+    /* display: flex; */
+    /*height: 20px;*/
+    /* justify-content: center; */
+    margin-left: 10%;
+    width: 82%;
 }
 .bookLabel {
     font-family: Roboto;
@@ -268,4 +280,7 @@ strong #total {
     margin: 20px;
     margin-bottom: 20px;
     text-align: center;
+}
+#passwordEmail {
+
 }
